--- a/src/components/PathSimulator/PathSimulator.css
+++ b/src/components/PathSimulator/PathSimulator.css
@@ -4,7 +4,7 @@
 
 
 /* CSS */
-.button-68 {
+.button {
   appearance: none;
   backface-visibility: hidden;
   background-color: #27ae60;
@@ -33,20 +33,4 @@
   touch-action: manipulation;
   vertical-align: top;
   white-space: nowrap;
-}
-
-.button-68:hover {
-  background-color: #1e8449;
-  opacity: 1;
-  transform: translateY(0);
-  transition-duration: .35s;
-}
-
-.button-68:active {
-  transform: translateY(2px);
-  transition-duration: .35s;
-}
-
-.button-68:hover {
-  box-shadow: rgba(39, 174, 96, .2) 0 6px 12px;
 }
